ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-simple-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-simple-app
  template:
    metadata:
      labels:
        app: my-simple-app
    spec:
      containers:
        - name: my-app-container
          image: nginx:latest  
          ports:
            - containerPort: 80
