ingress/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-simple-app-loadbalancer
spec:
  selector:
    app: my-simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
