ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-simple-app-ingress
spec:
  rules:
    - host: isaya.noble-mutuwa.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-simple-app-service
                port:
                  number: 80
